# etwall

./: .gitignore  colab_train.ipynb  pyproject.toml  train.py
src/data/: audio.py  dataset.py  text.py
src/pipeline/: attention.py  decoder.py  encoder.py  hifigan.py
