[project]
name = "tts-project"
version = "0.1.0"
description = "TTS desde cero en castellano"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchaudio",
    "librosa",
    "soundfile",
    "matplotlib",
    "numpy",
    "kaggle",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]